# seabubble

./: .gitignore  Cargo.toml  DEMO_SCRIPT.md  IDENTITY.md  Package.swift  README.md  SOUL.md  TOOLS.md  USER.md  generic_sns_marketing.md  openclaw_four_unlocks_sns.md
.build/: build.db  debug.yaml
.openclaw/: workspace-state.json
V2/: .gitignore  Package.swift
daemon/: Cargo.toml  com.seabubble.daemon.plist
daemon/agent-launcher/: Cargo.toml
daemon/agent-launcher/src/: main.rs
daemon/plugin-api/: Cargo.toml
daemon/plugin-api/src/: lib.rs
daemon/security-islandd/: Cargo.toml
daemon/security-islandd/src/: main.rs  setup.rs
daemon/security-islandd/src/scanners/: magika.rs  mod.rs  secrets.rs  shell_policy.rs  state.rs  wasm.rs
daemon/shared/: Cargo.toml
daemon/shared/src/: control.rs  darwin.rs  lib.rs
docs/: HANDOFF.md  SWIFT-MIGRATION-HANDOFF.md  agent-launcher-plan.md  audit-token-identity-plan-v2.md  audit-token-identity-plan.md  chatgpt-deep-think-prompt.md  cmux-capability-firewall-research.md  cmux-focus-sync-plan.md  final-documentation-plan.md  final-polish-plan.md  hackathon-presentation.md  multi-scanner-architecture-plan.md  nonce-handshake-plan.md  plugins-plan.md  production-app-architecture.md  production-architecture-roadmap.md  production-implementation-plan.md  production-plugin-architecture.md  production-setup-onboarding.md  security-island-prompts.md  socket-broker-plan.md  socket-io-parsing-plan.md  swift-architecture-research.md  swift-plugin-architecture.md  swift-ui-and-mock-plan.md  v2-architecture.md  xcode-setup.md  (+1 more)
(+418 files in other folders)
