[workspace]
members = [
    "security-islandd",
    "agent-launcher",
    "shared"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
uuid = { version = "1.7", features = ["v4", "fast-rng", "macro-diagnostics"] }
nix = { version = "0.28", features = ["net", "socket", "uio"] }
anyhow = "1.0"
