[package]
name = "security-islandd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
nix.workspace = true
anyhow.workspace = true
libc = "0.2"
sha2.workspace = true
hex = "0.4"
shared = { path = "../shared" }
regex = "1.10"

[features]
stateful-ast = []
